<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_platform"
        android:textAppearance="@style/TextAppearance.ContactsPlus.LabelMedium"
        android:textColor="@color/md_theme_onSurfaceVariant" />

    <Spinner
        android:id="@+id/social_link_platform_spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/touch_target_comfortable"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_marginBottom="@dimen/spacing_md"
        android:background="@drawable/spinner_background"
        android:popupBackground="@color/md_theme_surfaceContainer" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.ContactsPlus.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_md"
        android:hint="@string/username_or_handle"
        app:boxStrokeColor="@color/md_theme_primary"
        app:hintTextColor="@color/md_theme_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/social_link_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.ContactsPlus.BodyLarge" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.ContactsPlus.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/custom_label"
        app:boxStrokeColor="@color/md_theme_primary"
        app:hintTextColor="@color/md_theme_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/social_link_custom_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.ContactsPlus.BodyLarge" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
